# pinball-qr

./: .gitignore  .travis.yml  404.html  CONTRIBUTING.rst  Makefile  README.rst  index.html  meson.build  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/scripts/: install-openblas-win.ps1
.github/workflows/: build-publish.yml  ci.yml  docs.yml
api/datasets/: index.html
api/estimators/: index.html
api/inference/: index.html
api/solvers/: index.html
changelog/: index.html
contributing/: index.html
csrc/: meson.build  qr_pogs.cpp  qr_pogs.h
docs/: changelog.md  conf.py  contributing.md  index.md  installation.rst  license.md
docs/api/: datasets.md  estimators.md  inference.md  solvers.md
docs/getting-started/: installation.md  quickstart.md
docs/theory/: linear-methods.md  nonparametric.md  overview.md  preprocessing.md
examples/01_engel_curves/: index.html
examples/02_solver_comparison/: 02_solver_comparison.ipynb  index.html
examples/03_nonparametric_quantization/: index.html
fortran/: meson.build  rqfn.f  rqfnb.f
getting-started/installation/: index.html
getting-started/quickstart/: index.html
license/: index.html
pinball/: __init__.py  _bootstrap.py  _estimator.py  _inference.py  _typing.py  meson.build
pinball.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pinball/datasets/: __init__.py  _barro.py  _engel.py  barro.csv  meson.build
pinball/estimators/: __init__.py  _base.py  meson.build
pinball/linear/: __init__.py  _bootstrap.py  _estimator.py  _inference.py  meson.build
pinball/linear/solvers/: __init__.py  base.py  br.py  fnb.py  lasso.py  meson.build  pfn.py  pogs.py
pinball/nonparametric/: __init__.py  meson.build
pinball/nonparametric/quantization/: __init__.py  _clvq.py  _estimator.py  _voronoi.py  meson.build
pinball/solvers/: __init__.py  base.py  br.py  fnb.py  lasso.py  meson.build  pfn.py
pinball/util/: __init__.py  bandwidth.py  lambda_selection.py  meson.build
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/datasets/: index.html
site/api/estimators/: index.html
site/api/inference/: index.html
site/api/solvers/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/examples/01_engel_curves/: 01_engel_curves.ipynb  index.html
site/examples/02_solver_comparison/: index.html
site/examples/03_nonparametric_quantization/: 03_nonparametric_quantization.ipynb  index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/license/: index.html
site/search/: search_index.json
site/theory/linear-methods/: index.html
site/theory/nonparametric/: index.html
site/theory/overview/: index.html
site/theory/preprocessing/: index.html
tests/: test_bandwidth.py  test_bootstrap.py  test_clvq.py  test_datasets.py  test_estimator.py  test_fortran_smoke.py  test_inference.py  test_kernel_se.py  test_quantization_estimator.py  test_rank_ci.py  test_sklearn_compliance.py  test_solver_base.py  test_solver_br.py  test_solver_fnb.py  test_solver_lasso.py  test_solver_pfn.py  test_solver_pogs.py  test_solver_registry.py  test_voronoi.py
theory/linear-methods/: index.html
theory/nonparametric/: index.html
theory/overview/: index.html
theory/preprocessing/: index.html
