[build-system]
requires = ["meson-python>=0.13.0", "numpy>=1.23", "meson>=1.1.0"]
build-backend = "mesonpy"

[project]
name = "pinball"
version = "0.1.0"
description = "Fast and accurate quantile regression for Python, with an sklearn-compatible interface."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Michael Howard", email = "mah38900@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]
keywords = ["quantile regression", "statistics", "machine learning", "econometrics"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc",
]

[project.urls]
Homepage = "https://github.com/mah38900/pinball"
Documentation = "https://pinball.readthedocs.io"
Repository = "https://github.com/mah38900/pinball"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
