[build-system]
requires = ["meson-python>=0.13.0", "numpy>=1.23", "meson>=1.1.0"]
build-backend = "mesonpy"

[project]
name = "pinball"
version = "0.1.0"
description = "Fast and accurate quantile regression for Python, with an sklearn-compatible interface."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Michael Howard", email = "mah38900@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]
keywords = ["quantile regression", "statistics", "machine learning", "econometrics"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.20",
    "pymdown-extensions>=10",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
Homepage = "https://github.com/mah38900/pinball"
Documentation = "https://mah38900.github.io/pinball/"
Repository = "https://github.com/mah38900/pinball"
Issues = "https://github.com/mah38900/pinball/issues"
Changelog = "https://mah38900.github.io/pinball/changelog/"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip without strict=
]

[tool.ruff.lint.isort]
known-first-party = ["pinball"]

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
