[build-system]
requires = ["meson-python>=0.13.0", "numpy>=1.23", "meson>=1.1.0"]
build-backend = "mesonpy"

[project]
name = "pinball-qr"
version = "0.1.0"
description = "Fast and accurate quantile regression for Python, with an sklearn-compatible interface."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Michael Howard", email = "mah38900@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]
keywords = ["quantile regression", "statistics", "machine learning", "econometrics"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.20",
    "pymdown-extensions>=10",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
Homepage = "https://github.com/mhoward2718/pinball-qr"
Documentation = "https://mhoward2718.github.io/pinball-qr/"
Repository = "https://github.com/mhoward2718/pinball-qr"
Issues = "https://github.com/mhoward2718/pinball-qr/issues"
Changelog = "https://mhoward2718.github.io/pinball-qr/changelog/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip without strict=
]

[tool.ruff.lint.isort]
known-first-party = ["pinball"]

[tool.pytest.ini_options]
addopts = "-ra -v --import-mode=importlib"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# ── cibuildwheel ────────────────────────────────────────────
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
test-requires = ["pytest", "scipy", "scikit-learn"]
test-command = "python -m pytest {project}/tests -x --tb=short"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = "yum install -y gcc-gfortran openblas-devel lapack-devel"
before-build = "pip install meson meson-python numpy"

[tool.cibuildwheel.macos]
# "native" means the runner's own arch: arm64 on macos-14, x86_64 on macos-13
archs = ["native"]
before-all = "brew install gcc && GFORTRAN=$(ls $(brew --prefix)/bin/gfortran-[0-9]* 2>/dev/null | head -1) && [ -n \"$GFORTRAN\" ] && ln -sf \"$GFORTRAN\" $(brew --prefix)/bin/gfortran"
before-build = "pip install meson meson-python numpy"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "powershell -ExecutionPolicy Bypass -File \"{project}\\.github\\scripts\\install-openblas-win.ps1\""
before-build = "pip install meson meson-python numpy delvewheel"
repair-wheel-command = "delvewheel repair --add-path C:/openblas/bin -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
PKG_CONFIG_PATH = "C:/openblas/lib/pkgconfig"
